# GemmaRounter-GemmaRAGPipline

./: .gitignore  Gemma Todo  GemmaHowToUse  README.md  testcurl.txt
RAG-reference-scripts/: check_qdrant.py
docs/: jetson-orin-gemma4-setup.md  rag-reference-analysis.md
e2b-vision-test/: README.md  launch.sh
e2b-vision-test/examples/: sample_coordinate_prompt.txt  sample_scene_prompt.txt
e2b-vision-test/scripts/: infer_image.py  manage_local_gemma.sh  run_local_gemma.sh
final-score/: README.md  launch.sh  pyproject.toml
final-score/examples/: rag_release_request.json  server_llm_reroute_request.json
final-score/src/final_score/: __init__.py  api.py  config.py  models.py  service.py
final-score/tests/: test_service.py
first-router/: README.md  launch.sh  pyproject.toml
first-router/docs/: harness-engineering.md  router-schema.md
first-router/examples/: image_coordinate_prompt.txt  image_scene_prompt.txt  local_general_router_request.json  medical_router_request.json  server_general_router_request.json
first-router/prompts/: medical_router_system_prompt.txt
first-router/scripts/: curl_image_coordinate.sh  infer_image.py  manage_local_gemma.sh  run_local_gemma.sh
first-router/tests/: test_hard_rules.py  test_service.py
gemma-ServerRouter/: README.md  launch.sh  pyproject.toml
gemma-ServerRouter/docs/: router-schema.md
gemma-ServerRouter/examples/: server_router_llm_request.json
gemma-ServerRouter/prompts/: server_router_system_prompt.txt
gemma-ServerRouter/src/gemma_server_router/: api.py  cli.py  client.py  config.py  models.py  service.py
gemma-ServerRouter/tests/: test_service.py
gemma-rag/: README.md  launch-eval.sh  launch.sh
gemma-rag/config/: korean_medical_device_rag.env
gemma-rag/docs/: indexing-starter-corpus.md  jetson-rag-flow-explained.md  korean-medical-device-rag-profile.md
gemma-rag/examples/: rag_answer_request.json
gemma-rag/prompts/: rag_answer_system_prompt.txt
gemma-rag/scripts/: build_embedding_index.py  evaluate_rag_answers.py  manage_local_gemma.sh  run_local_gemma.sh
gemma-routing/: README.md  launch.sh  pyproject.toml
gemma-routing/docs/: harness-engineering.md  router-schema.md
gemma-routing/examples/: bulk_local_router_requests.json  bulk_rag_router_requests.json  bulk_server_router_requests.json  medical_router_request.json  router_api_request.json
gemma-routing/prompts/: local_short_answer_system_prompt.txt  medical_router_system_prompt.txt
gemma-routing/scripts/: manage_local_gemma.sh  run_local_gemma.sh
gemma-routing/src/gemma_routing/: api.py  client.py  config.py  handoff.py  hard_rules.py  models.py  policies.py  prompts.py  service.py  signals.py
gemma-routing/tests/: test_hard_rules.py  test_service.py
gemma-tranferRobotLLM/: README.md  launch.sh
gemma-tranferRobotLLM/docs/: llm-scope.md
gemma-tranferRobotLLM/examples/: stt_correction_request.json
gemma-tranferRobotLLM/scripts/: manage_local_gemma.sh
llama-rest-core/: .gitignore  CMakeLists.txt  FirstRouterNative.cpp  LLMManager.cpp  LLMManager.h  NativeRag.cpp  PipelineGateway.cpp  PipelineGateway.h  PipelineInternal.cpp  PipelineInternal.h  PipelineService.cpp  PipelineService.h  README.md  ServerPipelineNative.cpp  TransferRobotNative.cpp  build_text_embedding_index.py  gemma4_bf16_server.py  launch.sh  launch_bf16.sh  rag_embed_helper.py  rest.cpp  test_request.py  test_request_for_text.py
llama-rest-core/docs/: runtime-lane-and-kv-design.md
llama-rest-core/examples/: README.md  infer_image_coordinate.json  infer_text.json  infer_video_summary.json  mail_examples_with_curl.txt  process_from_first_router_llm.json  process_from_first_router_rag.json  rag_ask_error_code.json  rag_ask_manual.json  route_direct_llm.json  route_direct_rag.json  route_from_first_router_llm.json  route_from_first_router_rag.json  score_llm_reroute.json  score_rag_release.json
llama-rest-core/test-assets/public-research/: README.md  sources.tsv
llama-rest-core/test-assets/public-research/results/: abdomen_pelvis_ct_normal_axial_result.txt  brain_ct_normal_case2_result.txt  brain_mri_glioblastoma_regrowth_transverse_result.txt  brain_mri_post_glioblastoma_transverse_result.txt  cervical_spine_mri_case0003_result.txt  diagnosis_comparison_ko.md  diagnosis_results.json  echocardiography_apical_two_chamber_result.txt  embryonic_ultrasound_8w3d_result.txt  knee_mri_case0025_result.txt  lumbar_spine_mri_case01_result.txt  thorax_hrct_normal_result.txt
oak-wheelchair-depth-test/: CMakeLists.txt  README.md
oak-wheelchair-depth-test/docs/: flow.md
oak-wheelchair-depth-test/runtime-data/: capture_log.csv  capture_log.json  capture_log_depth_chart.pptx  capture_log_depth_chart_subset_interpolated.csv  capture_log_depth_chart_subset_interpolated.pptx  capture_log_table.pptx  depth_linear_calibration.json
oak-wheelchair-depth-test/scripts/: bootstrap_depthai.sh  extract_obstacle_metadata.py  fit_linear_depth_calibration.py  generate_obstacle_text_report.py  make_capture_log_chart_ppt.py  make_capture_log_table_ppt.py  make_subset_interpolated_chart_ppt.py
oak-wheelchair-depth-test/src/: main.cpp
oak-wheelchair-depth-test/test-assets/korean-hospital-obstacles/: README.md  sources.tsv
oak-wheelchair-depth-test/test-assets/korean-hospital-obstacles/results/: obstacle_metadata.json  obstacle_summary.md
oak-wheelchair-depth-test/test-assets/korean-hospital-obstacles/results/raw/: transport_room_shared_01.txt
presentation/: README.md
presentation/assets/: README.md  depth_comparison_data.csv
presentation/export/: gemma4_oak_obstacle_presentation_editable_shapes.pptx
presentation/figures/: 01_system_pipeline.mmd  02_coordinate_transform.mmd  03_oak_depth_flow.mmd  README.md  build_rendered_assets.py
rag-answerer/: README.md  launch-eval.sh  launch.sh
rag-reference-api-legacy/: app.py  check_db.py  ingest.py
scripts/: run_gemma4_llama_server.sh
second-router/: README.md  launch.sh
shared-scripts/: manage_gemma4_llama_server.sh  run_gemma4_llama_server.sh
transfer-robot-llm/: README.md  launch.sh
(+46 files in other folders)
