[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma-server-router"
version = "0.1.0"
description = "Server-side Gemma router that decides whether a request needs RAG grounding."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
gemma-server-router = "gemma_server_router.cli:main"
gemma-server-router-api = "gemma_server_router.api:run"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
